digitransit-component/packages/digitransit-component-autosuggest/src/helpers/styles.scss
/* stylelint-disable */ 
@import '~@hsl-fi/sass/colors';
@import '~@hsl-fi/sass/mixins/screen';
@import '~@hsl-fi/sass/mixins/text';

$primary-color: #007ac9;
$from-color: #64be14;
$to-color: #ec5188;
$search-result-text-highlight-background-color: #F4F4F5;
$zindex: base, map-container, footer, map-gradient, map-fullscreen-toggle,
  map-buttons, context-panel, search-panel, search-overlay, preferred-input, destination-input,
  viapoint-input-5, viapoint-input-4, viapoint-input-3, viapoint-input-2,
  viapoint-input-1, origin-input, search-input-focus, search-input-icon, rectangle, autosuggest-suggestion-container, front;

input[type='text'] {
  margin: 0;
}

.container {
  display: flex;
  width: 100%;
  .input {
    &.favourite {
      padding-left: 1.25em;
      padding-right: 44px;
    }
    &.thin {
      height: 34px;
    }
    font-size: 16px;
    font-family: 'Gotham Rounded A', 'Gotham Rounded B', Arial, Georgia, Serif;
    display: flex;
    width: 100%;
    height: 44px;
    border-radius: 5px;
    border: solid 1px #888888;
    background-color: #ffffff;
    padding-left: 50px;
    padding-right: 44px;
    line-height: 1.2;
    letter-spacing: -0.5px;
    color: #333;
    box-sizing: border-box;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    &:focus {
      background: #fff;
      outline: none;
      border: solid 1px $primary-color;
      box-shadow: none;
    }
    @include min-width(tablet) {
      font-size: 15px;
      height: 42px;
      padding-left: 49px;
    }

    &::placeholder {
      color: #666666;
      font-size: 15px;
    }
  }
}

.hasValue {
  color: #333333;
}

.suggestionsContainerOpen {
  width: 100%;
  max-height: 60vh;
  border-radius: 5px;
  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.06);
  border: solid 1px rgba(0, 0, 0, 0.1);
  overflow-x: hidden;
  overflow-y: scroll;
  position: absolute;
  background-color: white;
  top: calc(3 * 0.875rem + 9px);
  z-index: index($zindex, 'autosuggest-suggestion-container');
}

.suggestionsContainer {
  background-color: white;
  z-index: index($zindex, 'autosuggest-suggestion-container');

  .suggestionsList {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background: white;
    li:hover {
      background: $search-result-text-highlight-background-color;
    }
  }
}

.suggestion {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  cursor: pointer;
  list-style: none;
  display: block;
  overflow-x: hidden;
  overflow-y: hidden;
  white-space: nowrap;
}

.suggestionHighlighted {
  background-color: $search-result-text-highlight-background-color;
}

.autosuggest-input-container {
  position: relative;
  width: 100%;
  &.searchfield-preferred-bottom {
    left: 0;
    width: inherit;
    margin-left: 1em;
    margin-right: 1em;
  }
  &.origin {
    z-index: index($zindex, origin-input);
  }

  &.destination {
    z-index: index($zindex, destination-input);
  }

  &.stop-route-station {
    z-index: index($zindex, preferred-input);
  }
}

.autosuggest-input-icon {
  display: flex;
  position: absolute;
  align-items: center;
  width: 16px;
  height: 100%;
  margin-top: 0;
  margin-left: 19px;

  svg {
    width: 16px;
    height: 24px;
  }
  &.origin {
    svg {
      fill: $from-color;
      width: 16px;
      height: 24px;
    }
  }
  &.destination {
    svg {
      fill: $to-color;
      width: 16px;
      height: 24px;
    }
  }
  &.stop-route-station {
    svg {
      fill: #888888;
      width: 16px;
      height: 16px;
    }
  }
}

button.clear-input {
  display: flex;
  position: absolute;
  padding: 14px 0;
  right: 0px;
  width: 44px;
  height: 100%;
  color: $primary-color;
  outline: none;
  border: 0px;
  margin: 0px;
  justify-content: center;
  text-align: left;
  background: none;
  border-style: none;
  border-width: 0px;
  cursor: pointer;
  font-family: inherit;
  background-color: transparent;
  transition: none;

  svg {
    fill: $primary-color;
    width: 16px;
    height: 16px;
  }
  &:focus {
    background-color: transparent;
    color: inherit;
  }
  &:active {
    background-color: transparent;
    color: inherit;
  }
  &:hover {
    background-color: transparent;
    color: inherit;
  }
}

.sr-only:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

